--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/jest": "^27.4.1",
+    "@react-three/drei": "^9.4.2",
+    "@react-three/fiber": "^8.0.11",
     "@types/node": "^16.11.27",
     "@types/react": "^18.0.5",
     "@types/react-dom": "^18.0.1",
+    "@types/three": "^0.139.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.1",
+    "three": "^0.139.2",
     "typescript": "^4.6.3"
   },
   "scripts": {
