--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "fiber-docs",
+  "name": "r3f-examples",
   "version": "0.1.0",
   "private": true,
+  "homepage": "/r3f-examples",
   "dependencies": {
     "@react-three/drei": "^9.4.2",
     "@react-three/fiber": "^8.0.11",
@@ -11,9 +12,11 @@
     "@types/three": "^0.139.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "three": "^0.139.2",
-    "typescript": "^4.6.3"
+    "typescript": "^4.6.3",
+    "valtio": "^1.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -38,5 +41,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.5",
+    "postcss": "^8.4.13",
+    "tailwindcss": "^3.0.24"
   }
 }
