Instanced vertex-colors

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/react": "^18.0.5",
     "@types/react-dom": "^18.0.1",
     "@types/three": "^0.139.0",
+    "nice-color-palettes": "^3.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
