--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "/r3f-examples",
   "dependencies": {
+    "@react-spring/three": "^9.4.4",
     "@react-three/drei": "^9.4.2",
     "@react-three/fiber": "^8.0.11",
     "@types/node": "^16.11.27",
