--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.0.5",
     "@types/react-dom": "^18.0.1",
     "@types/three": "^0.139.0",
+    "leva": "^0.9.23",
     "nice-color-palettes": "^3.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
