--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@react-three/cannon": "^6.3.0",
     "@react-three/drei": "^9.4.2",
     "@react-three/fiber": "^8.0.11",
+    "@react-three/postprocessing": "^2.3.2",
     "@types/node": "^16.11.27",
     "@types/react": "^18.0.5",
     "@types/react-dom": "^18.0.1",
