--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "simplex-noise": "^3.0.1",
     "three": "^0.139.2",
     "typescript": "^4.6.3",
     "valtio": "^1.6.0"
