--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@types/react": "^18.0.5",
     "@types/react-dom": "^18.0.1",
     "@types/three": "^0.139.0",
+    "@use-gesture/react": "^10.2.12",
     "leva": "^0.9.23",
+    "lodash-es": "^4.17.21",
     "nice-color-palettes": "^3.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
