--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^18.0.1",
     "@types/three": "^0.139.0",
     "@use-gesture/react": "^10.2.12",
+    "babel-plugin-glsl": "^1.0.0",
     "leva": "^0.9.23",
     "lodash-es": "^4.17.21",
     "nice-color-palettes": "^3.0.0",
