--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "leva": "^0.9.23",
     "lodash-es": "^4.17.21",
     "nice-color-palettes": "^3.0.0",
+    "random-words": "^1.1.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
