--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/three": "^0.139.0",
     "@use-gesture/react": "^10.2.12",
     "babel-plugin-glsl": "^1.0.0",
+    "lamina": "^1.1.20",
     "leva": "^0.9.23",
     "lodash-es": "^4.17.21",
     "nice-color-palettes": "^3.0.0",
